flapivor/tests/tests-m3/hopix/typechecker/good/if3.hopix
val x = 1

val test : int =
  if x = 0 then 0
  else if x = 1 then 1
  else if x > 0 then 2
  else if x < 0 then 3
  else if x <= 0 then 4
  else if x >= 0 then 5
  else if x = 0 && x > 0 then 6
  else 33