flapivor/tests/tests-m3/hopix/typechecker/bad/if1.hopix
val test : string =
  if true then "string" else 0